# faces

./: .gitignore  CLAUDE.md  LICENSE  config.example.yaml  pyproject.toml  view_cluster.py  view_crops.py
faces/: algo.py  cli.py  config.py  db.py  scanner.py  timing.py  viz.py
faces/commands/: classify.py  clusterize.py  info.py  label.py  list_clusters.py  migrate.py  optimize.py  rename.py  repair_paths.py  scan.py  serve.py  show.py  stick.py
faces/web/: deps.py  main.py  models.py
faces/web/routers/: classify.py  clusterize.py  clusters.py  faces.py  images.py  people.py  photos.py
faces/web/static/: app.css  app.js  index.html
session_notes/: 2026-03-03_web-api.md  2026-03-07_performance_plan.md  2026-03-15_preview-strip-autoscroll.md  2026-03-15_preview-strip-thumb-style.md  2026-03-26_better-labeling-challenge_plan.md  2026-03-26_better-labeling-challenge_prompt.md
